Kcov (17):
	* Coloring improvements (?) of the HTML output

	* Refactor HTML output completely to use javascript-based pages.
	  This allows selecting how to sort directly from the web page,
	  and greatly simplifies the generating C++ code

	* Correct filtering bug in the merged output, where the last
	  run would filter out data from the previous runs

	* Issue #20: Fix hanging-on-killed-by-signal

	-- Simon Kagstrom <simon.kagstrom@gmail.com>,

Kcov (17):
	* Issue #19: Fix bug where kcov would let children which called
	  setpgid live even after terminating kcov itself (Oliver)

	* Issue #16: Output: Implement a merged mode, which shows a
	  combination of all covered programs under the [merged] link

	* Fix an HTML output bug introduced in kcov 14 where the summary
	  counts in the index page would be wrong.

	* Issue #15: Fix a crash when source lines are > ~2000 characters long

	* Issue #17: Fix parsing of multiple include/exclude patterns
	  (Jamie Kirkpatrick)

	* Split usage in common/uncommon options

	* Improve unit tests and robot framework tests

	* Various work on the kernel-engine and general refactoring

	-- Simon Kagstrom <simon.kagstrom@gmail.com>, Sun May 18 19:24:14 CEST 2014

Kcov (16):
	* kernel-engine: Implement an engine to handle kernel code coverage
	  collection (not finished)

	* kprobe-coverage: Refactor the kernel module so that it basically
	  works now

	* Code refactoring and more C++11-izing

	* Python: Filter out some false negatives (i.e., non-executable
	  lines marked as red)

	* Python: Report absolute paths so that output filtering works

	* Python: Catch exceptions in the python helper to avoid EOF etc
	  being propagated upwards (and coverage collection to fail)

	* Python: Fix a case where the engine would simply hang on waiting
	  for more data

	-- Simon Kagstrom <simon.kagstrom@gmail.com>, Fri Mar 21 16:38:28 CET 2014


Kcov (15):
	* Workaround a shared-library issue where kcov would sometimes hang on