@@ -41,11 +41,11 @@
   <tr><td class="ruler"><img src="data/glass.png" width="3" height="3" alt=""/></td></tr>
 </table>
 
-<pre class="source" id="source-code">
+<pre class="source" id="main-data">
 <source-line data-template><span class="lineNum">{{lineNum}}</span><span class="{{class}}">{{coverage}} {{line}}</span>
 </source-line>
 </pre>
-<table width="100%" border="0" cellspacing="0" cellpadding="0">
+<table width="100%" border="0" cellspacing="0" cellpadding="0" id="merged-data">
   <tr><td class="ruler"><img src="data/amber.png" width="3" height="3" alt=""/></td></tr>
   <tr><td class="versionInfo">Generated by: <a href="http://simonkagstrom.github.com/kcov/index.html">Kcov</a></td></tr>
 </table>
